<resources>
    <string name="app_name">LUMA</string>
    <string name="tv_luma">LUMA</string>
    <string name="tv_mya">Moda y Accesorios</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_inicio">Home</string>
    <string name="products">Products</string>
    <string name="favorites">Favorites</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="login">Log in</string>
    <string name="lklogin"><u>Log in</u></string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="login_failed">"Login failed"</string>
    <string name="tv_forgot_password">Forgot your password?</string>
    <string name="lkforgot"><u>Forgot your password?</u></string>
    <string name="tv_not_account">Create a new account </string>
    <string name="txt_error_login">Error login</string>
    <string name="txt_success_login">Successfull login</string>
    <string name="txt_accept">Accept</string>
    <string name="txt_cancel">Cancel</string>
    <string name="et_names">Name</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_lastname">Invalid lastname</string>
    <string name="invalid_mail">Invalid e-mail format</string>
    <string name="et_lastname">Last Name</string>
    <string name="accept_ptc"><u>policy, terms and conditions</u></string>
    <string name="already_account">Have an account already?</string>
    <string name="et_email">E-mail</string>
    <string name="et_password">Password</string>
    <string name="lksignup"><u>Sign up</u></string>
    <string name="signup">Sign up</string>
    <string name="btn_send">Send</string>
    <string name="txt_name">Nombre del producto</string>
    <string name="Log_Out">Log Out</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_imagen">Imagen</string>
    <string name="agree">I agree to</string>
    <string name="et_code_product">Code:</string>
    <string name="et_name_product">Product Name</string>
    <string name="et_description_product">Product Description</string>
    <string name="et_price_product">Cost:</string>
    <string name="et_quantity_product">Quantity</string>
    <string name="et_image_product">Image URL</string>
    <string name="register">Register</string>
    <string name="delete">Delete</string>
    <string name="modify">Modify</string>
    <string name="tv_terms">Terms and Conditions</string>
    <string name="tv_privacy_policies">Privacy Policies</string>
    <string name="btn_back">Back</string>
    <string name="tv_name_product">Product Name</string>
    <string name="tv_value_product">Value</string>
    <string name="iv_image_product">Product Image</string>
    <string name="color">Color:</string>
    <string name="size">Size:</string>
    <string name="quantity">Quantity:</string>
    <string name="edit_size_color"><u>Edit size or color</u></string>
    <string name="total">Total:</string>
</resources>