<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    android:layout_margin="10dp"
    android:padding="5dp">

    <ImageView
        android:id="@+id/img_product"
        android:src="@drawable/ic_launcher_foreground"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:scaleType="centerInside"
        android:background="@color/gray"
        android:contentDescription="@string/iv_image_product">
    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <ImageButton
            android:id="@+id/imgbtn_favorite"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favorite"
            android:background="@null"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="70"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_name_product"
                android:textSize="12sp"
                android:gravity="center"
                android:maxLines="2">
            </TextView>

            <TextView
                android:id="@+id/tv_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tv_value_product"
                android:gravity="center"
                android:textSize="12sp">
            </TextView>

        </LinearLayout>

        <ImageButton
            android:id="@+id/imgbtn_shopping"
            android:layout_width="0dp"
            android:layout_weight="15"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_shopping"
            android:background="@null"/>

    </LinearLayout>

</LinearLayout>